# pipeline-airflow-dbt

./: .gitignore  README.md  README_en.md  README_pt.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: pipeline_dbt.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: resumo_vendas_clientes.sql
dbt/models/marts/: dim_cliente.sql  dim_cliente.yml  dim_entrega.sql  dim_entrega.yml  dim_pagamento.sql  dim_pagamento.yml  dim_produto.sql  dim_produto.yml  dim_vendedor.sql  dim_vendedor.yml  fato_vendas.sql
dbt/models/staging/: stg_categorias.sql  stg_clientes.sql  stg_departamentos.sql  stg_enderecos.sql  stg_entregas.sql  stg_fornecedores.sql  stg_itens_pedido.sql  stg_pagamentos.sql  stg_produtos.sql  stg_vendedores.sql
docs/: modelagem_dimensional.md
docs/Scripts_SQL/: modelagem_dimensional.sql  start_gen_dados_sinteticos.sql
pipeline_airflow_dbt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: start_gen_dados_sinteticos.sql
scripts/SQL/: modelagem_dimensional.sql  start_gen_dados_sinteticos.sql
